2017-03-23  Werner Lemberg  <wl@gnu.org>

	* src/ftmulti.c (Process_Event, main): Fix rounding.

2017-03-23  Werner Lemberg  <wl@gnu.org>

	[ftmulti] Show PS name.

	* src/ftmulti.c (Render_All): Adjust vertical start position.
	(Render_Text): Make arguments similar to `Render_All'.
	Adjust vertical start position.
	(Process_Event): Round non-integer axis values to two decimal
	digits.
	(main): Updated.
	Print PostScript name.

2017-03-20  Brian Nixon  <nixonb@yahoo.com>

	[ftview] Improve waterfall mode (#50586).

	* src/ftview.c (Render_Waterfall): Stop repeating of the default
	glyph to the end of each line after the display text.

2017-03-20  Brian Nixon  <nixonb@yahoo.com>

	* graph/win32/grwin32.c(syskey_translators): Fix F10 key (#50585).

	`F10' does not work as advertised in the demos because the
	message-handling code expects it to arrive as a `normal' key but
	Windows sends it as a `system' key (because it is reserved for
	activating the menu bar, per the IBM Common User Access standard).

	Fix this by adding `F10' to the ‛syskey_translators’ table.

	(We also remove the existing handling of `F1' as a `system' key,
	because this does not appear to be necessary.  `F1' is sent as a
	`normal' key and is correctly handled by the ‛key_translators’
	table.)

2017-03-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftbench.c (main, usage): Add optional LCD filtering.

2017-03-19  Brian Nixon  <nixonb@yahoo.com>

	[graph] Make demo windows minimise-able on Win32 (#50582).

	* graph/win32/grwin32.c (gr_win32_surface_init): Implement it.

2017-03-13  Werner Lemberg  <wl@gnu.org>

	[ftdump] Show ID numbers for standard `name' table entries.

	* src/ftdump.c (EXPAND, XEXPAND, NAME_ID): New macros.
	(name_id): Use new macros.

2017-02-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftgamma.c (main): Label images.

2017-02-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Add box-filtered subpixel pattern.
